--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,7 +57,8 @@ mybatis:
   configuration:
     mapUnderscoreToCamelCase: true
 files:
-  path: ${file-path:e:/files}
+#  path: ${file-path:e:/files}
+  path: ${file-path:/home/images}
 logging:
   config: classpath:logback-admin.xml
 log:
@@ -71,4 +72,4 @@ token:
     seconds: 7200
   jwtSecret: (XIAO:)_$^11244^%$_(WEI:)_@@++--(LAO:)_++++_.sds_(SHI:)
 server:
-  port: 8081
+  port: 8088
